--- a/src/MichelMichels.WeatherApp/MichelMichels.WeatherApp.csproj
+++ b/src/MichelMichels.WeatherApp/MichelMichels.WeatherApp.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageReference Include="MaterialDesignThemes" Version="5.1.0" />
   </ItemGroup>
 
